<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Lineage Project
     Copyright (C) 2020 ronaxdevil <pratabidya.007@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="advanced_settings">Parallax Hub</string>
    <string name="advanced_settings_summary">Kernel Specific Customisations</string>

    <string name="display_title">Display</string>

    <!-- Backlight Dimmer -->
    <string name="backlight_dimmer">Backlight Dimmer</string>
    <string name="backlight_summary">Dim the display to the maximum value</string>

    <string name="vibration_title">Vibration</string>
    <string name="vibration_strength_title">Vibration Strength</string>

    <!-- Spectrum Profiles -->
    <string name="spectrum_profile_title">Spectrum</string>
    <string name="spectrum_title">Kernel Profiles</string>
    <string name="spectrum_summary">Choose your kernel Profiles</string>
    <string name="spectrum_dialogTitle">Choose your Kernel Profiles</string>

    <!-- Values for Spectrum Presets -->
    <string name="spectrum_performance">Performance</string>
    <string name="spectrum_battery">Battery</string>
    <string name="spectrum_gaming">Gaming</string>
    <string name="spectrum_balance">Balance</string>
    <string name="spectrum_ubattery">Ultra Battery</string>

    <string name="audio_title">Audio</string>
    <string name="highperfaudio_title">Audio High Performance Mode</string>
    <string name="highperfaudio_summary">Enable to get bettter performing audio</string>

    <!-- Audio amplification -->
    <string name="headphone_gain">Headphone gain</string>
    <string name="microphone_gain">Microphone gain</string>
    <string name="speaker_gain">Speaker gain</string>

    <!-- USB fastcharge -->
    <string name="usb_fastcharge_title">USB Fastcharge</string>
    <string name="fastcharge_title">Enable USB Fastcharge</string>
    <string name="fastcharge_summary">Charge upto 900mA when connected to a computer via USB 3.0 port</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Log Tile -->
    <string name="quick_settings_log_tile_label">LogTile</string>
    <string name="quick_settings_log_tile_dialog_title">Options</string>
    <string name="cannot_get_su">Action failed because of missing superuser access</string>

    <!-- FPS Info -->
    <string name="fps_info_title">FPS Info Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>

    <!-- Touchboost -->
    <string name="Boost_title">Boost</string>
    <string name="touchboost_title">Enable Touchboost</string>
    <string name="touchboost_summary">Boost cpu when touch detected for smooth experience</string>

    <!-- GPU Boost Profiles -->
    <string name="gpuboost_title">GPU Boost</string>
    <string name="gpuboost_summary">Boost your gpu without compromising power efficiency</string>
    <string name="gpuboost_dialogTitle">Select your GPU boost level</string>

    <!-- Values for GPU Boost Presets -->
    <string name="gpuboost_high">High</string>
    <string name="gpuboost_medium">Medium</string>
    <string name="gpuboost_low">Low</string>
    <string name="gpuboost_disable">Disable</string>

    <!-- CPU Boost Profiles -->
    <string name="cpuboost_title">CPU Boost</string>
    <string name="cpuboost_summary">Boost your cpu for better Experience</string>
    <string name="cpuboost_dialogTitle">Select your CPU Boost level</string>

    <!-- Values for CPU Boost Presets -->
    <string name="cpuboost_high">High</string>
    <string name="cpuboost_medium">Medium</string>
    <string name="cpuboost_low">Low</string>
    <string name="cpuboost_disable">Disable</string>

    <!-- Torch Brightness -->
    <string name="torch_title">Torch</string>
    <string name="torch_brightness_title">Brightness</string>

    <string name="chargingled_title">Charging LED</string>
    <string name="led_blinking_title">Blinking Intensity</string>

    <string name="cameraflash_title">Camera Flash</string>
    <string name="yellowflash_intensity_title">Yellow Light Intensity</string>

    <string name="thermal_title">Thermal</string>
    <string name="msmthermal_title">MSM Thermal</string>
    <string name="msmthermal_summary">Enable Thermal driver control</string>
    <string name="corecontrol_title">Core Control</string>
    <string name="corecontrol_summary">Limit the cores</string>
    <string name="vddrestrict_title">VDD Restriction</string>
    <string name="vddrestrict_summary">Limits CPU voltage</string>
    <string name="cpucore_title">CPU Core</string>
    <string name="cpucore_summary">Control Your CPU core</string>
    <string name="cpucore_dialogTitle">Select no. of core want to disable</string>

    <!-- Values for CPU Boost Presets -->
    <string name="cpucore_zero">0</string>
    <string name="cpucore_one">1</string>
    <string name="cpucore_two">2</string>
    <string name="cpucore_three">3</string>
    <string name="cpucore_four">4</string>
    <string name="cpucore_five">5</string>
    <string name="cpucore_six">6</string>
    <string name="cpucore_seven">7</string>

    <string name="misc_title">Miscellaneous</string>
    <!-- LKM Profiles -->
    <string name="lkmprofile_title">Low Memory Killer</string>
    <string name="lkmprofile_summary">Low Memory Killer</string>
    <string name="lkmprofile_dialogTitle">Choose your LKM profile</string>

    <!-- Values for LKM Presets -->
    <string name="lkmprofile_veryaggressive">Very Aggressive</string>
    <string name="lkmprofile_aggressive">Aggressive</string>
    <string name="lkmprofile_light">Light</string>
    <string name="lkmprofile_medium">Medium</string>
    <string name="lkmprofile_verylight">Very Light</string>
    <string name="lkmprofile_default">Default</string>
    <string name="lkmprofile_disable">Disable</string>

    <!-- LKM Profiles -->
    <string name="tcpcongestion_title">TCP Congestion</string>
    <string name="tcpcongestion_summary">Transmission Control Protocol Congestion Algorithm</string>
    <string name="tcpcongestion_dialogTitle">Choose your TCP Congestion Algorithm</string>

    <!-- Values for LKM Presets -->
    <string name="tcpcongestion_westwood">westwood</string>
    <string name="tcpcongestion_cubic">cubic</string>
    <string name="tcpcongestion_reno">reno</string>
    <string name="tcpcongestion_bic">bic</string>
    <string name="tcpcongestion_highspeed">highspeed</string>
    <string name="tcpcongestion_htcp">htcp</string>
</resources>
