<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2020 ronaxdevil <pratabidya.007@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">

        <com.moto.mayhemparts.preferences.VibratorStrengthPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:icon="@drawable/ic_vibrate"
            android:title="@string/vibration_strength_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <com.moto.mayhemparts.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="backlight_dimmer"
            android:icon="@drawable/ic_backlight"
            android:title="@string/backlight_dimmer"
            android:summary="@string/backlight_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title">

        <com.moto.mayhemparts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/spectrum_dialogTitle"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:key="spectrum"
            android:summary="@string/spectrum_summary"
            android:icon="@drawable/ic_spectrum" 
            android:title="@string/spectrum_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="boost"
        android:title="@string/Boost_title" >

        <com.moto.mayhemparts.preferences.SecureSettingSwitchPreference
            android:key="touchboost"
            android:defaultValue="true"
            android:title="@string/touchboost_title"
            android:icon="@drawable/ic_boost"
            android:summary="@string/touchboost_summary" />

        <com.moto.mayhemparts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/cpuboost_dialogTitle"
            android:entries="@array/cpuboost_profiles"
            android:entryValues="@array/cpuboost_values"
            android:key="cpuboost"
            android:summary="@string/cpuboost_summary"
            android:icon="@drawable/ic_cpuboost" 
            android:title="@string/cpuboost_title" />

        <com.moto.mayhemparts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/gpuboost_dialogTitle"
            android:entries="@array/gpuboost_profiles"
            android:entryValues="@array/gpuboost_values"
            android:key="gpuboost"
            android:summary="@string/gpuboost_summary"
            android:icon="@drawable/ic_gpuboost" 
            android:title="@string/gpuboost_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="torch"
        android:title="@string/torch_title">

        <com.moto.mayhemparts.preferences.CustomSeekBarPreference
            android:defaultValue="150"
            android:key="torch_brightness"
            android:max="255"
            app:min="1"
            android:icon="@drawable/ic_torch"
            android:title="@string/torch_brightness_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <com.moto.mayhemparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="2"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />

        <com.moto.mayhemparts.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain" />

        <com.moto.mayhemparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="speaker_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_speaker"
            android:title="@string/speaker_gain" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb_fastcharge"
        android:title="@string/usb_fastcharge_title" >
        <com.moto.mayhemparts.preferences.SecureSettingSwitchPreference
            android:key="fastcharge"
            android:defaultValue="true"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb_fastcharge"
            android:summary="@string/fastcharge_summary" />
    </PreferenceCategory>

</PreferenceScreen>
